Change Log

11-Oct-2008
- adjust MusicControlPanel to pin each column width to the ClientArea's width, eliminating "phantom" columns

0.2
- Removed tooltip on zone list
- Added log4j logging
- Dispose correctly on close
- Added icons for zones, library entries
- Added Radio, Line In to library
- Browse requests now cancelled when table is disposed
- Added Search bar
- Added URL adder bar

0.1
Initial Release. 
Currently works for: 
  Browsing Music 
  Adding to queue (not removing) 
  Seeking in queue 
  Changing volume 
  Next/Previous 
  Displaying now playing info